--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,26 @@ ol, ul {
   padding-left: 30px;
 }
 
+.title {
+  display: block;
+  margin: 0 auto;
+  font-size: 3em;
+  padding-bottom: 1em;
+}
+
 .board-row:after {
   clear: both;
   content: "";
   display: table;
 }
 
+Board {
+  border: 5px solid black;
+}
+
 .status {
   margin-bottom: 10px;
+  font-size: 1em;
 }
 
 .square {
@@ -43,6 +55,10 @@ ol, ul {
 .game {
   display: flex;
   flex-direction: row;
+}
+
+.game-board {
+  margin: 0 auto;
 }
 
 .game-info {
