--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,7 @@ ol, ul {
   padding-left: 30px;
 }
 
-.title {
-  display: block;
-  margin: 0 auto;
-  font-size: 3em;
-  padding-bottom: 1em;
-}
+
 
 .board-row:after {
   clear: both;
@@ -53,14 +48,18 @@ Board {
 }
 
 .game {
-  display: flex;
-  flex-direction: row;
+  width: 100%;
+  /*display: flex;
+  flex-direction: row;*/
+}
+
+.board {
+  margin-left: 25%;
 }
 
 .game-board {
+  width: 50%;
   margin: 0 auto;
 }
 
-.game-info {
-  margin-left: 20px;
-}
+
